# distrida

./: .gitignore  README.md  pyproject.toml  register.json  reserviere.py
lib/ortreg/: ansicht.py  art.py  artbaum.py  artwrap.py  aschnitt.py  binich.py  ding.py  eigenidents.py  einrueck.py  finding.py  freiheit.py  gpgpriv.py  gpgpub.py  habebaum.py  habelink.py  ident.py  klassdict.py  ladeklasse.py  listearten.py  listefunks.py  machding.py  nochfrei.py  ortlink.py  register.py  rohart.py  schnitt.py  setzding.py  spender.py  text.py  unbek.py  verkuerze.py  wegdeutung.py
lib/pfade/: __init__.py  blick.py  blickspender.py  form.py  formate.py  karte.py  kombinat.py  ort.py  ortspender.py  test.bspdat  test.ospdat  weg.py  zu.py
src/distrida/: __init__.py  command_line_programm.py  database.py
src/distrida/address_system/: blick.py  blickspender.py  form.py  formate.py  karte.py  ort.py  ortspender.py  test.blick2  weg.py
src/distrida/data/: distrida_database_seed.yaml  general_info.yaml
src/distrida/kind_classes/: artbaum.py  freiheit.py  gpgpriv.py  gpgpub.py  habebaum.py  habelink.py  ident.py  identity.py  kind.py  kind_tree.py  ortlink.py  ownership_tree.py  spender.py  text.py  unbek.py
src/distrida/ortreg/: __init__.py  ansicht.py  art.py  artbaum.py  artwrap.py  aschnitt.py  binich.py  data_formats.py  database.py  ding.py  eigenidents.py  einrueck.py  finding.py  freiheit.py  gpgpriv.py  gpgpub.py  habebaum.py  habelink.py  ident.py  kind.py  kindwrap.py  klassdict.py  ladeklasse.py  ortlink.py  (+16 more)
test/: __init__.py  test_database.py  test_general.py
(+4 files in other folders)
